# Ep005

./: README.md  notes.txt  other_notes.txt
src/: CMakeLists.txt  main.cpp
src/include/: dog.h
src/logger/include/: log.h
src/logger/src/: log.cpp
src/src/: dog.cpp
